--- a/events-api/Events.Api/Properties/launchSettings.json
+++ b/events-api/Events.Api/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "try_azure_serverless": {
+    "events.api": {
       "commandName": "Project",
       "commandLineArgs": "--port 7210",
       "launchBrowser": false
