--- a/events-web/package.json
+++ b/events-web/package.json
@@ -11,6 +11,8 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@azure/msal-browser": "^2.28.1",
+    "@azure/msal-react": "^1.4.5",
     "@reduxjs/toolkit": "^1.8.2",
     "axios": "^0.27.2",
     "react": "^18.0.0",
