--- a/events-authorization-api/Events.Authorization.Api/Events.Authorization.Api.csproj
+++ b/events-authorization-api/Events.Authorization.Api/Events.Authorization.Api.csproj
@@ -5,7 +5,6 @@
     <OutputType>Exe</OutputType>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <RootNamespace>Events.Api</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.1.0" />
@@ -13,6 +12,9 @@
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.OpenApi" Version="1.4.0" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" Version="1.3.0" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker" Version="1.6.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\events-api\Events.Share\Events.Share.csproj" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
@@ -29,11 +31,5 @@
   </ItemGroup>
   <ItemGroup>
     <Using Include="System.Threading.ExecutionContext" Alias="ExecutionContext" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Infrastructures\" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Events.Share\Events.Share.csproj" />
   </ItemGroup>
 </Project>
